# roothelper

./: .clang-format  .gitignore  README.md  ROOT_helper.h  analysis_8cpp_source.html  analysis_8h_source.html  annotated.html  classes.html  classroothelper_1_1DataSaver-members.html  classroothelper_1_1DataSaver.html  classroothelper_1_1MultiObject-members.html  classroothelper_1_1MultiObject.html  classroothelper_1_1ObjectList-members.html  classroothelper_1_1ObjectList.html  container_8cpp_source.html  container_8h_source.html  core_2include_2roothelper_2roothelper_8h_source.html  data__saver_8cpp_source.html  data__saver_8h_source.html  dir_24d671cfcbc5d5238a6bd565a49d198f.html  dir_24d671cfcbc5d5238a6bd565a49d198f_dep.map  dir_24d671cfcbc5d5238a6bd565a49d198f_dep.md5  dir_3503f86ebac7e9741312f92017d9530a.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_5a97e3755ecf239752315a7fef36a535.html  dir_5a97e3755ecf239752315a7fef36a535_dep.map  dir_5a97e3755ecf239752315a7fef36a535_dep.md5  files.html  functions.html  functions_func.html  graph_legend.html  graphics_8cpp_source.html  graphics_8h_source.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  (+37 more)
.github/workflows/: doxygen.yml
script/: CreateRootClangd  open_root_browser.bat  rooti
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  (+4 more)
src/: CMakeLists.txt  ROOT_helper.h  roothelper.h
src/auxiliary/: rootlogon.C
src/core/: CMakeLists.txt  analysis.cpp  container.cpp  data_saver.cpp  graphics.cpp
src/core/include/ROOT_helper/: ROOT_helper.h  analysis.h  container.h  data_saver.h  graphics.h
src/core/include/roothelper/: analysis.h  container.h  data_saver.h  graphics.h  roothelper.h
src/document/: API_REFERENCE.md  CMakeLists.txt
src/exec/: CMakeLists.txt  test_data_saver.cpp  test_graphics.cpp
test_macro/: test_graph2d.cpp  test_graphics.cpp
